GNOME Bugzilla – Bug 656334
MetaWindowActor: Fix incorrect short-circuit
Last modified: 2011-08-26 17:07:59 UTC
One of the bugs for mutter after 644930 landed.
Created attachment 193630 [details] [review] MetaWindowActor: Fix incorrect short-circuit The code here was wrong in every way: it only updated the shape if all the borders changed. It never saved new last_borders even if it *had* changed, and the bounding rectangle's x and y positions were still important otherwise. This had user-visible impact when doing simple things like changing the border_width. It would short-circuit here and due to the above incorrectness, weirdness could happen where windows would be cut off and so on.
Attachment 193630 [details] pushed as 46415bb - MetaWindowActor: Fix incorrect short-circuit
Oops. Pushed by accident.